--- a/Homepage.html
+++ b/Homepage.html
@@ -132,7 +132,69 @@
                     <i class="fa-solid fa-circle-arrow-right" style="color: #7f56d9;"></i>
                 </nav>
             </div>
-        </div>    
-    </div> 
+            <div class="trusted">
+                <p>Trusted by</p>
+                <hr>
+            </div>
+            <div class="company-logo">
+                <img src="Images/Airwallex.png" alt="" class="air">
+                <img src="Images/Outreach.png" alt="" class="out">
+                <img src="Images/Razorpay.png" alt="" class="razo">
+                <img src="Images/Discord.png" alt="" class="discord">
+                <img src="Images/Dropbox.png" alt="" class="drop">
+            </div>
+        </div>
+        <div class="blogs-wrapper">
+            <button>Blogs</button>
+            <h1>From our latest blogs</h1>
+            <div class="blogs-1">
+                <img src="Images/Blogs.jpeg" alt="">
+                <a href="#" class="blog-action">Healthcare</a>
+                <h2>The Future of AI in Healthcare: Transforming Patient Care</h2>
+                <p> Explore the incredible potential of artificial intelligence (AI) in revolutionizing healthcare. Discover how AI-driven technologies are enhancing diagnostics, personalized medicine, and patient outcomes. Dive into real-world examples and gain insights into the future of healthcare.</p>   
+                <div class="read-more">
+                    <a href="#" class="read">Read more</a>
+                </div>
+            </div>
+            <div class="blogs-2">
+                <img src="Images/Blogs.jpeg" alt="">
+                <a href="#" class="blog-action">Healthcare</a>
+                <h2>The Future of AI in Healthcare: Transforming Patient Care</h2>
+                <p> Explore the incredible potential of artificial intelligence (AI) in revolutionizing healthcare. Discover how AI-driven technologies are enhancing diagnostics, personalized medicine, and patient outcomes. Dive into real-world examples and gain insights into the future of healthcare.</p>   
+                <div class="read-more">
+                    <a href="#" class="read">Read more</a>
+                </div>
+            </div>
+        </div>
+        <div class="action-view">
+            <button>Contact Us</button>
+            <a href="#"><p1>View all <i class="fa-solid fa-chevron-right"></i></p1></a>
+        </div>
+        <div class="subscribe">
+            <img src="Images/Subscribe.jpeg" alt="">
+            <div class="sub">
+                <img src="Images/Envelop.svg" alt="">
+                <h3>Do cool things with us.</h3>
+                <p>Stay in the loop with updates from our team and community. Once a month.</p>
+                <input type="email" name="name" value="" placeholder="Enter your email"/><br><br>
+                <button>Subscribe to newsletter</button>
+            </div>
+        </div>  
+    </div>
+    <footer>
+        <div class="footer-heading">  
+            <img src="Images/Vector.png" alt="">
+            <h1>FutureSphere</h1>
+        </div>
+            <div class="footer-list">
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Blogs</a></li>
+                    <li><a href="">Pricing</a></li>
+                </ul>
+            </div>
+            <p>© 2023 FutureSphere. All rights reserved.</p>
+    </footer>  
 </body>
 </html>
