one responsive mode 538px

--- a/Homepage.html
+++ b/Homepage.html
@@ -111,11 +111,11 @@
             <p>Join our roster of satisfied clients and experience the exceptional results and service that have earned us the trust of industry leaders worldwide</p>
         </div>
         <div class="logo-wrapper">
-            <img src="Images/Descript.png" alt="">
-            <img src="Images/Slack.png" alt="">
-            <img src="Images/Shopify.png" alt="">
-            <img src="Images/elastic.png" alt="">
-            <img src="Images/loom.png" alt="">
+            <img src="Images/Descript.png" alt="" class="desc">
+            <img src="Images/Slack.png" alt="" class="slack">
+            <img src="Images/Shopify.png" alt="" class="shopify">
+            <img src="Images/elastic.png" alt="" class="elastic">
+            <img src="Images/loom.png" alt="" class="loom">
         </div>
         <div class="testimonial-section">
             <button>Testimonials</button>
@@ -194,7 +194,14 @@
                     <li><a href="">Pricing</a></li>
                 </ul>
             </div>
-            <p>© 2023 FutureSphere. All rights reserved.</p>
+            <div class="icon">
+                <p>© 2023 FutureSphere. All rights reserved.</p>
+                <div class="icons">
+                    <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+                </div>
+            </div>
     </footer>  
 </body>
 </html>
