responsive mode 768px

--- a/Homepage.html
+++ b/Homepage.html
@@ -137,32 +137,34 @@
                 <hr>
             </div>
             <div class="company-logo">
-                <img src="Images/Airwallex.png" alt="" class="air">
-                <img src="Images/Outreach.png" alt="" class="out">
-                <img src="Images/Razorpay.png" alt="" class="razo">
-                <img src="Images/Discord.png" alt="" class="discord">
-                <img src="Images/Dropbox.png" alt="" class="drop">
+                <img src="Images/Air.svg" alt="" class="air">
+                <img src="Images/out.svg" alt="" class="out">
+                <img src="Images/razo.svg" alt="" class="razo">
+                <img src="Images/discord.svg" alt="" class="discord">
+                <img src="Images/drop.svg" alt="" class="drop">
             </div>
         </div>
         <div class="blogs-wrapper">
             <button>Blogs</button>
             <h1>From our latest blogs</h1>
-            <div class="blogs-1">
-                <img src="Images/Blogs.jpeg" alt="">
-                <a href="#" class="blog-action">Healthcare</a>
-                <h2>The Future of AI in Healthcare: Transforming Patient Care</h2>
-                <p> Explore the incredible potential of artificial intelligence (AI) in revolutionizing healthcare. Discover how AI-driven technologies are enhancing diagnostics, personalized medicine, and patient outcomes. Dive into real-world examples and gain insights into the future of healthcare.</p>   
-                <div class="read-more">
-                    <a href="#" class="read">Read more</a>
+            <div class="blogs">
+                <div class="blogs-1">
+                    <img src="Images/Blogs.jpeg" alt="">
+                    <a href="#" class="blog-action">Healthcare</a>
+                    <h2>The Future of AI in Healthcare: Transforming Patient Care</h2>
+                    <p> Explore the incredible potential of artificial intelligence (AI) in revolutionizing healthcare. Discover how AI-driven technologies are enhancing diagnostics, personalized medicine, and patient outcomes. Dive into real-world examples and gain insights into the future of healthcare.</p>   
+                    <div class="read-more">
+                        <a href="#" class="read">Read more</a>
+                    </div>
                 </div>
-            </div>
-            <div class="blogs-2">
-                <img src="Images/Blogs.jpeg" alt="">
-                <a href="#" class="blog-action">Healthcare</a>
-                <h2>The Future of AI in Healthcare: Transforming Patient Care</h2>
-                <p> Explore the incredible potential of artificial intelligence (AI) in revolutionizing healthcare. Discover how AI-driven technologies are enhancing diagnostics, personalized medicine, and patient outcomes. Dive into real-world examples and gain insights into the future of healthcare.</p>   
-                <div class="read-more">
-                    <a href="#" class="read">Read more</a>
+                <div class="blogs-2">
+                    <img src="Images/Blogs.jpeg" alt="">
+                    <a href="#" class="blog-action">Healthcare</a>
+                    <h2>The Future of AI in Healthcare: Transforming Patient Care</h2>
+                    <p> Explore the incredible potential of artificial intelligence (AI) in revolutionizing healthcare. Discover how AI-driven technologies are enhancing diagnostics, personalized medicine, and patient outcomes. Dive into real-world examples and gain insights into the future of healthcare.</p>   
+                    <div class="read-more">
+                        <a href="#" class="read">Read more</a>
+                    </div>
                 </div>
             </div>
         </div>
