--- a/Homepage.html
+++ b/Homepage.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Homepage</title>
     <link rel="stylesheet" href="Stylesheet/hompage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Manrope&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
@@ -73,17 +76,17 @@
         </div>
         <div class="content-wrapper">
             <div class="innovation">
-                <img src="Images/Icon.png" alt="">
+                <img src="Images/Icon.svg" alt="">
                 <h1>Cutting-Edge Innovation</h1>
                 <p>Experience groundbreaking technological advancements that push the boundaries of what's possible, revolutionizing industries and transforming the way we live and work.</p>
             </div>
             <div class="connectivity">
-                <img src="Images/Icon-1.png" alt="">
+                <img src="Images/Icon-1.svg" alt="">
                 <h1>Seamless Connectivity</h1>
                 <p>Stay connected anytime, anywhere with our robust and reliable network infrastructure, ensuring uninterrupted communication and effortless access to the digital world.</p>
             </div>
             <div class="interface">
-                <img src="Images/Icon-2.png" alt="">
+                <img src="Images/Icon-2.svg" alt="">
                 <h1>Intuitive User Interface</h1>
                 <p>Enjoy a seamless and intuitive user experience with our sleek and user-friendly interface, designed to simplify complex tasks and enhance productivity.</p>
             </div>
@@ -140,8 +143,10 @@
                 <img src="Images/Air.svg" alt="" class="air">
                 <img src="Images/out.svg" alt="" class="out">
                 <img src="Images/razo.svg" alt="" class="razo">
-                <img src="Images/discord.svg" alt="" class="discord">
-                <img src="Images/drop.svg" alt="" class="drop">
+                <div class="sublogo">
+                    <img src="Images/discord.svg" alt="" class="discord">
+                    <img src="Images/drop.svg" alt="" class="drop">
+                </div>
             </div>
         </div>
         <div class="blogs-wrapper">
@@ -173,7 +178,7 @@
             <a href="#"><p1>View all <i class="fa-solid fa-chevron-right"></i></p1></a>
         </div>
         <div class="subscribe">
-            <img src="Images/Subscribe.jpeg" alt="">
+            <img src="Images/Subscribe.svg" alt="">
             <div class="sub">
                 <img src="Images/Envelop.svg" alt="">
                 <h3>Do cool things with us.</h3>
