--- a/Future Sphere.html
+++ b/Future Sphere.html
@@ -71,9 +71,6 @@ h3{
     line-height: 1.5rem;
     list-style-image: url(Images/Right-arrow.png);
 }
-{
-    color: var(--white-color);
-}
 .list>ul>li>a{
     color: var(--white-color);
     text-decoration: none;
@@ -172,7 +169,7 @@ h3{
             <h3>Pages Included:</h3>
             <ul>
                 <li><a href="Homepage.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="About.html">About</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Blogs</a></li>
                 <li><a href="#">Pricing</a></li>
