--- a/About.html
+++ b/About.html
@@ -69,6 +69,38 @@
             <h2>Guided by Integrity and Purpose</h2>
             <p>At FutureSphere, we are driven by a strong set of values that shape every aspect of our business, ensuring transparency, ethical practices, and a shared commitment to making a positive impact.</p>   
         </div>
+        <div class="content-wrapper">
+            <div class="integrity">
+                <img src="Images/Integrity.svg" alt="">
+                <h1>Integrity</h1>
+                <p> Upholding honesty and ethical conduct in everything we do, building trust with our stakeholders.</p>
+            </div>
+            <div class="innovation">
+                <img src="Images/Innovation.svg" alt="">
+                <h1>Innovation</h1>
+                <p>Embracing a culture of creativity and continuous improvement to drive groundbreaking solutions.</p>
+            </div>
+            <div class="collaboration">
+                <img src="Images/collaboration.svg" alt="">
+                <h1>Collaboration</h1>
+                <p>Fostering a collaborative environment that encourages teamwork, diversity, and shared success.</p>
+            </div>
+            <div class="customer-centric">
+                <img src="Images/customer.svg" alt="">
+                <h1>Customer-centric</h1>
+                <p> Putting our customers at the heart of everything we do, delivering exceptional experiences and exceeding their expectations.</p>
+            </div>
+            <div class="sustainability">
+                <img src="Images/sustainability.svg" alt="">
+                <h1>Sustainability</h1>
+                <p> Operating with a focus on environmental and social responsibility, striving for a more sustainable future.</p>
+            </div>
+            <div class="excellence">
+                <img src="Images/excellence.svg" alt="">
+                <h1>Excellence</h1>
+                <p> Pursuing excellence in all aspects of our work, setting high standards and striving for continuous growth and improvement.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
