some more alterations

--- a/Homepage.html
+++ b/Homepage.html
@@ -221,10 +221,12 @@
     </div>
     <div class="footer-container">
         <footer>
-            <div class="footer-heading">  
-                <img src="Images/Vector.png" alt="">
-                <h1>FutureSphere</h1>
-            </div>
+            <img src="Images/Footer-design.svg" alt="">
+            <div class="footer">
+                <div class="footer-heading">  
+                    <img src="Images/Vector.png" alt="">
+                    <h1>FutureSphere</h1>
+                </div>
                 <div class="footer-list">
                     <ul>
                         <li><a href="">About</a></li>
@@ -241,6 +243,7 @@
                         <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
                     </div>
                 </div>
+            </div>
         </footer>
     </div>  
 </body>
