--- a/Homepage.html
+++ b/Homepage.html
@@ -16,9 +16,11 @@
         <div class="head-container">
             <Header>
                 <div class="main-head">
+                    <div class="first-heading">
                         <img src="Images/Vector.png" alt="">
-                    <div class="heading">
-                        <h1>FutureSphere</h1>
+                        <div class="heading">
+                            <h1>FutureSphere</h1>
+                        </div>
                     </div>
                     <div class="menu-list">
                         <ul>
@@ -202,7 +204,7 @@
         </div>
         <div class="action-view">
             <button>Contact Us</button>
-            <a href="#"><p1>View all <i class="fa-solid fa-chevron-right"></i></p1></a>
+            <a href="#"><p>View all <i class="fa-solid fa-chevron-right"></i></p></a>
         </div>
         <div class="subscribe-container">
             <div class="subscribe">
@@ -212,8 +214,10 @@
                         <img src="Images/Envelop.svg" alt="">
                         <h3>Do cool things with us.</h3>
                         <p>Stay in the loop with updates from our team and community. Once a month.</p>
-                        <input type="email" name="name" value="" placeholder="Enter your email"/><br><br>
-                        <button>Subscribe to newsletter</button>
+                        <div class="input">
+                            <input type="email" name="name" value="" placeholder="Enter your email"/>
+                            <button>Subscribe to newsletter</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -223,17 +227,19 @@
         <footer>
             <img src="Images/Footer-design.svg" alt="">
             <div class="footer">
-                <div class="footer-heading">  
-                    <img src="Images/Vector.png" alt="">
-                    <h1>FutureSphere</h1>
-                </div>
-                <div class="footer-list">
-                    <ul>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Careers</a></li>
-                        <li><a href="">Blogs</a></li>
-                        <li><a href="">Pricing</a></li>
-                    </ul>
+                <div class="footer-content">
+                    <div class="footer-heading">  
+                        <img src="Images/Vector.png" alt="">
+                        <h1>FutureSphere</h1>
+                    </div>
+                    <div class="footer-list">
+                        <ul>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Careers</a></li>
+                            <li><a href="">Blogs</a></li>
+                            <li><a href="">Pricing</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="icon">
                     <p>© 2023 FutureSphere. All rights reserved.</p>
