--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
             <div class="view">
                 <button>Contact Us</button>
-                <a href="#">View all <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="#"><p>View All</p> <i class="fa-solid fa-chevron-right"></i></a>
             </div>
         <div class="mission-container">
             <div class="mission">
@@ -204,7 +204,7 @@
         </div>
         <div class="action-view">
             <button>Contact Us</button>
-            <a href="#"><p>View all <i class="fa-solid fa-chevron-right"></i></p></a>
+            <a href="#"><p>View All</p> <i class="fa-solid fa-chevron-right"></i></a>
         </div>
         <div class="subscribe-container">
             <div class="subscribe">
