--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
                     </div>
                     <div class="menu">
                         <button>Contact Us</button>
-                        <img src="Images/menu-02.png" alt="">
+                        <div class="sidebarmenu">
+                            <div class="top"></div>
+                            <div class="middle"></div>
+                            <div class="low"></div>
+                            <div class="sidebar-menu-list">
+                                <ul>
+                                    <li><a href="">About</a></li>
+                                    <li><a href="">Careers</a></li>
+                                    <li><a href="">Blogs</a></li>
+                                    <li><a href="">Pricing</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </Header>
