--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                                     <li><a href="">Careers</a></li>
                                     <li><a href="">Blogs</a></li>
                                     <li><a href="">Pricing</a></li>
+                                    <li><button class="sign-action">Signup</button>
+                                        <button class="contact">Contact Us</button></li>
                                 </ul>
                             </div>
                         </div>
